@@ -14,6 +14,9 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- Try to avoid exhausting the color table when rendering 24bit key
+  images into 8bit results (#1594)
+
 - Avoid crash, and ensure error report when loading keyimage fails (#1594)
 
 - Improve the handling of simple string comparisons for raster classified
